Correct About Me paragraph spacing: Move second line up, restore final line gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -314,8 +314,12 @@ h2 {
     padding: 0 10px;
 }
 
-#about p:nth-of-type(2) {
+#about > p:nth-of-type(1) {
     margin-top: -15px;
+}
+
+#about > p:last-of-type {
+    margin-top: 15px;
 }
 
 #about img {
